--- a/index.html
+++ b/index.html
@@ -61,24 +61,30 @@
                     <div class="container-info-photo">
                         <img src="images/Figma_passions.JPG" alt="">
                     </div>
-                    <h2>Visuels</h2>
-                    <p>Visuels de sites internet créés sur Figma</p>
+                    <div class="text_card">
+                        <h2>Visuels</h2>
+                        <p>Visuels de sites internet créés sur Figma</p>
+                    </div>
                 </div>
 
                 <div class="info-card">
                     <div class="container-info-photo">
                         <img src="images/3D_Catapulte_A.jpg" alt="">
                     </div>
-                    <h2>3D</h2>
-                    <p>Modeling 3D et animations créées via le logiciel Maya</p>
+                    <div class="text_card">
+                        <h2>3D</h2>
+                        <p>Modeling 3D et animations créées via le logiciel Maya</p>
+                    </div>
                 </div>
 
                 <div class="info-card">
                     <div class="container-info-photo">
                         <img src="images/Parfum.jpg" alt="">
                     </div>
-                    <h2>Photoshop</h2>
-                    <p>Montage photo sur Photoshop</p>
+                    <div class="text_card">
+                        <h2>Photoshop</h2>
+                        <p>Montage photo sur Photoshop</p>
+                    </div>
                 </div>
         </section>
 
